    0.4.5
        * README: Corrected RAM usage.
2016-12-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.4
        * anonymine.py, anonymine_engine.py, anonymine_fields.py, anonymine_solver.py:
            Not all operating systems have os.geteuid.
        * anonymine.py (main): OpenIndiana had fixed the issue long ago.

2016-12-10      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.3
        * anonymine_solver.py: The PyPy bug has been tracked down to the
            `possibilities` function.   Bug fixed: used `is` instead of `==`
            when comparing a variable against a string literal.
        * test.py: Use `profile` instead of `cProfile`.
    0.4.2
        * anonymine.py: Updated status of
            https://github.com/oskar-skog/anonymine/issues/14
        * Makefile.static: Re-enabled overwrite-cfg.
        * anonymine.py: Warn of the opendiana bug:
            https://github.com/oskar-skog/anonymine/issues/4

2016-12-06      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.1
        * anonymine_solver.py (solver_loop): Found a potential bug:
            `fail` was not set to False if a solvable cell was found.
        * anonymine_solver.py: Removed commented out profiling code.
        * anonymine_solver.py: (WRONG>>) Tracked down the PyPy bug to the
            number_neighbours function.  Uncomment the print and
            run pypybug() in test.py. (<<WRONG)

2016-12-05      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.0
        * NEWS: gitgub.com does not resolve; converted a reference to BUGS
        * INSTALL: MUST run `make` before `make install`; mentioned bug with
            symlinks when DESTDIR is set.
        * Makefile.static (uninstall), INSTALL: Delete the highscores file.

2016-12-04      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.19
        * HACKING: Mention that only versions 0.1.15 and above are in Github.
        * INSTALL: Many small changes.