@@ -14,4 +14,5 @@ anonymine-wrapper
 anonymine.desktop
 enginecfg.out
 mkenginecfg.py
-
+reconfigure
+Makefile.vars
