@@ -15,7 +15,7 @@
 NAME := anonymine
 NAME_C := Anonymine
 DESCRIPTION = Minesweeper without guessing
-VERSION := pre-0.4.5
+VERSION := test-0.4.5
 
 # Five more variables are required: sysconfdir, vargamesdir, EXECUTABLES and
 # MODULES, and MODULES_OTHERVER which may be set to "non-existent".
@@ -84,7 +84,6 @@ ALL_STAGE := "$(MAIN_STAGE)" "$(OSX_WRAPPER)" "$(OSX_INFO_PLIST)" \
 	"$(OSX_ICON)" "$(builddir)check.py" "$(FD_DESKTOP_STAGE)" \
 	"$(ENGINECFG_STAGE)" "$(builddir)mkenginecfg.py"
 
-
 all : $(MAIN_STAGE) $(ENGINECFG_STAGE)
 	@$(info) 'Maybe building .desktop and app/bundle'
 	@if "$(freedesktop)"; then \
@@ -95,25 +94,35 @@ all : $(MAIN_STAGE) $(ENGINECFG_STAGE)
 	fi
 
 
-$(MAIN_STAGE) : $(MAIN_SRC) $(srcdir)Makefile.static
+$(builddir)Makefile : $(builddir)Makefile.vars $(srcdir)Makefile.static
+	@$(info) 'Recreating Makefile'
+	@cat "$(builddir)Makefile.vars" "$(srcdir)Makefile.static" \
+		>"$(builddir)Makefile"
+
+$(builddir)Makefile.vars : $(srcdir)configure $(srcdir)configure.py
+	@$(info) 'Reconfiguring...'
+	@cd "$(builddir)" && ./reconfigure
+
+
+$(MAIN_STAGE) : $(MAIN_SRC) $(srcdir)Makefile.static $(builddir)Makefile
 	@$(info) 'Creating the appropriate shebang line'
 	@echo "#!`which python`" > "$(MAIN_STAGE)"
 	@sed -e "$(MAIN_STAGE_SED1)" "$(MAIN_SRC)" \
 		| sed -e "$(MAIN_STAGE_SED2)" >> "$(MAIN_STAGE)"
 
 
-$(ENGINECFG_STAGE) : $(srcdir)mkenginecfg
+$(ENGINECFG_STAGE) : $(srcdir)mkenginecfg $(builddir)Makefile
 	@$(info) 'Making enginecfg: mostly counting processors'
 	@"$(srcdir)mkenginecfg" "$(srcdir)" "$(builddir)" "$(HISCORE_FILE)"
 
 
-build-freedesktop : FORCE
+build-freedesktop : FORCE $(builddir)Makefile
 	@: # Refer to desktop/README for information about the following.
 	@"$(FD_MK_DESKTOP)" "$(FD_DESKTOP_STAGE)" $(NAME) "$(NAME_C)" \
 		"$(DESCRIPTION) -- version $(VERSION)"
 
 
-build-macosx : FORCE
+build-macosx : FORCE $(builddir)Makefile
 	@: # Refer to desktop/README for information about the following.
 	@echo '#!/bin/sh' > "$(OSX_WRAPPER)"
 	@echo 'open -b com.apple.terminal' "$(MAIN_DEST)" >> "$(OSX_WRAPPER)"
@@ -123,14 +132,14 @@ build-macosx : FORCE
 
 
 
-clean : FORCE
+clean : FORCE $(builddir)Makefile
 	@rm $(ALL_STAGE) 2> /dev/null || true
 	@: # Remove the bytecode files.
 	@rm -- "$(srcdir)"*.pyc 2> /dev/null || true
 	@rm -r -- "$(srcdir)"__pycache__/ 2> /dev/null || true
 
 
-distclean : clean
+distclean : clean $(builddir)Makefile
 	@rm $(builddir)Makefile
 
 
@@ -180,7 +189,7 @@ FD_ICON_DEST256 := $(FD_ICON_DESTDIR256)/$(NAME).png
 BUNDLE := $(DESTDIR)/Applications/$(NAME_C).app
 
 
-check-install-cfg : FORCE
+check-install-cfg : FORCE $(builddir)Makefile
 	@$(PRE_INSTALL)
 	@: # Cause installation to fail if the configuration is incompatible.
 	@$(info) 'Installing or checking configuration'
@@ -191,14 +200,14 @@ check-install-cfg : FORCE
 	@$(INSTALL_CFG) "$(ENGINECFG_STAGE)" "$(CFG_DIR)/enginecfg" $(verbose)
 
 
-overwrite-cfg: FORCE
+overwrite-cfg: FORCE $(builddir)Makefile
 	@$(INSTALL) -m 644 "$(srcdir)cursescfg" "$(CFG_DIR)/cursescfg"
 	@$(INSTALL) -m 644 "$(ENGINECFG_STAGE)" "$(CFG_DIR)/enginecfg"
 	@$(info) "Configuration has been overwritten"
 	@$(info) "All (if any) system-wide modifications are lost"
 
 
-install-dirs : FORCE
+install-dirs : FORCE $(builddir)Makefile
 	@$(info) 'Installing directories'
 	@mkdir -p "$(CFG_DIR)" || true
 	@mkdir -p "$(DESTDIR)$(vargamesdir)" || true
@@ -218,7 +227,7 @@ install-dirs : FORCE
 	fi
 
 
-install : check-install-cfg install-dirs
+install : all check-install-cfg install-dirs $(builddir)Makefile
 	@$(NORMAL_INSTALL)
 	@: # When the configuration has been installed, install the main
 	@: # program, and then the modules for both versions of Python.
@@ -263,7 +272,7 @@ install : check-install-cfg install-dirs
 	fi
 
 
-uninstall: FORCE
+uninstall: FORCE $(builddir)Makefile
 	@$(PRE_UNINSTALL)
 	@if "$(freedesktop)"; then \
 		xdg-desktop-menu uninstall --novendor --mode system \
@@ -286,7 +295,7 @@ uninstall: FORCE
 	fi
 
 
-print-destinations: FORCE
+print-destinations : FORCE $(builddir)Makefile
 	@echo "Main program:          $(MAIN_DEST)"
 	@echo "Engine module:         $(ENGINE_DEST)"
 	@echo "Solver module:         $(SOLVER_DEST)"
@@ -323,17 +332,17 @@ PKG := $(NAME)-$(VERSION)
 
 test : check
 	@true
-check: FORCE
+check : FORCE $(builddir)Makefile
 	@$(info) "Checking that it works on both snakes... May take a while!"
 	@$(srcdir)check.sh "$(srcdir)" "$(builddir)"
 
 
-dist : FORCE
+dist : FORCE $(builddir)Makefile
 	@$(info) "Building tarballs..."
 	@$(srcdir)mkdist "$(srcdir)" "$(builddir)" "$(PKG)"
 
 
-release : dist check
+release : dist check $(builddir)Makefile
 	@cp -t ~www-data/archive/"$(NAME)/" "$(PKG).tar.gz" \
 		|| echo You are not me.
 	@cp -t ~www-data/archive/"$(NAME)/" "$(PKG).tar.xz" \
